; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/rp/extr_rp.c_rp_do_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/rp/extr_rp.c_rp_do_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8 (%struct.TYPE_4__*)* }
%struct.rp_port = type { i32, i32, i32, i32, i32, %struct.TYPE_4__*, %struct.tty* }
%struct.tty = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@POLL_INTERVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @rp_do_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rp_do_poll(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.rp_port*, align 8
  %5 = alloca %struct.tty*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = bitcast i8* %9 to %struct.rp_port*
  store %struct.rp_port* %10, %struct.rp_port** %4, align 8
  %11 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %12 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %11, i32 0, i32 6
  %13 = load %struct.tty*, %struct.tty** %12, align 8
  store %struct.tty* %13, %struct.tty** %5, align 8
  %14 = load %struct.tty*, %struct.tty** %5, align 8
  %15 = load i32, i32* @MA_OWNED, align 4
  %16 = call i32 @tty_lock_assert(%struct.tty* %14, i32 %15)
  %17 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %18 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %17, i32 0, i32 5
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** %3, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i8 (%struct.TYPE_4__*)*, i8 (%struct.TYPE_4__*)** %21, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %24 = call zeroext i8 %22(%struct.TYPE_4__* %23)
  store i8 %24, i8* %7, align 1
  %25 = load i8, i8* %7, align 1
  %26 = zext i8 %25 to i32
  %27 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %28 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = shl i32 1, %29
  %31 = and i32 %26, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %51

33:                                               ; preds = %1
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %35 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %36 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call zeroext i8 @sGetAiopIntStatus(%struct.TYPE_4__* %34, i32 %37)
  store i8 %38, i8* %8, align 1
  %39 = load i8, i8* %8, align 1
  %40 = zext i8 %39 to i32
  %41 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %42 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = shl i32 1, %43
  %45 = and i32 %40, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %33
  %48 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %49 = call i32 @rp_handle_port(%struct.rp_port* %48)
  br label %50

50:                                               ; preds = %47, %33
  br label %51

51:                                               ; preds = %50, %1
  %52 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %53 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %52, i32 0, i32 4
  %54 = call i32 @sGetTxCnt(i32* %53)
  store i32 %54, i32* %6, align 4
  %55 = load i32, i32* %6, align 4
  %56 = icmp sge i32 %55, 0
  br i1 %56, label %57, label %66

57:                                               ; preds = %51
  %58 = load i32, i32* %6, align 4
  %59 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %60 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %59, i32 0, i32 2
  %61 = load i32, i32* %60, align 8
  %62 = icmp sle i32 %58, %61
  br i1 %62, label %63, label %66

63:                                               ; preds = %57
  %64 = load %struct.tty*, %struct.tty** %5, align 8
  %65 = call i32 @rpstart(%struct.tty* %64)
  br label %66

66:                                               ; preds = %63, %57, %51
  %67 = load %struct.rp_port*, %struct.rp_port** %4, align 8
  %68 = getelementptr inbounds %struct.rp_port, %struct.rp_port* %67, i32 0, i32 3
  %69 = load i32, i32* @POLL_INTERVAL, align 4
  %70 = call i32 @callout_schedule(i32* %68, i32 %69)
  ret void
}

declare dso_local i32 @tty_lock_assert(%struct.tty*, i32) #1

declare dso_local zeroext i8 @sGetAiopIntStatus(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @rp_handle_port(%struct.rp_port*) #1

declare dso_local i32 @sGetTxCnt(i32*) #1

declare dso_local i32 @rpstart(%struct.tty*) #1

declare dso_local i32 @callout_schedule(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
